# nonebot_plugin_navicat

./: .gitignore  README.markdown  README.md  setup.cfg  setup.py
nonebot_plugin_navicat/: __init__.py  command.py  elasticsearch.py  mongodb.py  mysql.py  postgre.py  redis.py  sqlite.py
test/: test_sential.py
